--- a/src/components/ChannelEntry.css
+++ b/src/components/ChannelEntry.css
@@ -9,7 +9,6 @@
     flex-direction: row;
     align-items: center;
 
-    font-size: 1em;
     color: var(--fg-0);
     font-weight: 600;
 }
